--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# Core dependencies with pinned versions
 anyio==4.9.0
 certifi==2025.7.9
 h11==0.16.0
@@ -9,8 +10,8 @@ python-telegram-bot==22.2
 sniffio==1.3.1
 typing_extensions==4.14.1
 
-# OpenCV for image processing
-opencv-python>=4.7.0.72
+# Image processing (headless OpenCV to reduce size)
+opencv-python-headless>=4.7.0.72
 
 # NumPy for array operations
 numpy>=1.24.3
@@ -18,9 +19,10 @@ numpy>=1.24.3
 # Pillow for image I/O
 Pillow>=9.4.0
 
-# PyTorch and torchvision for your neural‑net code
-torch>=2.0.0
-torchvision>=0.15.1
+# PyTorch CPU-only versions
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.7.1+cpu
+torchvision==0.22.1+cpu
 
-# Python wrapper for Tesseract OCR
+# Tesseract OCR wrapper
 pytesseract>=0.3.10
